card , perfil e projetos finalizados - caio

--- a/projetos-compartilhados/projeto-faz-bem.html
+++ b/projetos-compartilhados/projeto-faz-bem.html
@@ -292,6 +292,9 @@
         crossorigin="anonymous"></script>
 
     <script src="/js/projeto.js"></script>
+    <script src="/js/projeto.js"></script>
+     <script src="/js/index.js"></script>
+    <script src="/js/perfil.js"></script>
 </body>
 
 </html>
