--- a/projeto_pd_ead.html
+++ b/projeto_pd_ead.html
@@ -60,7 +60,7 @@
                         <h6 class="dropdown-header">Sistemas</h6>
                     </li>
                     <li>
-                        <a class="dropdown-item" href="https://talentos.pdcase.com/ead/">PD EAD</a>
+                        <a class="dropdown-item" href="#">PD Case EAD</a>
                     </li>
                 </ul>
             </div>
@@ -84,7 +84,7 @@
                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
                     <div class="modal-body m-0 p-0"><!-- opções de sistemas -->
-                        <a class="dropdown-item" href="https://talentos.pdcase.com/ead/">PD EAD</a>
+                        <a class="dropdown-item " href="index.html">PD Case EAD</a>
                     </div>
                 </div>
             </div>
@@ -255,8 +255,8 @@
         integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
         crossorigin="anonymous"></script>
 
-    <script src="js/projeto.js"></script>
-    <script src="/js/index.js"></script>
+        <script src="/js/index.js"></script>
+    <script src="/js/projeto.js"></script>
 </body>
 
 </html>
