--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                         <h6 class="dropdown-header">Sistemas</h6>
                     </li>
                     <li>
-                        <a class="dropdown-item" href="https://talentos.pdcase.com/ead/">PD EAD</a>
+                        <a class="dropdown-item" href="https://talentos.pdcase.com/">PD Case EAD</a>
                     </li>
                 </ul>
             </div>
@@ -83,7 +83,7 @@
                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
                     <div class="modal-body m-0 p-0"><!-- opções de sistemas -->
-                        <a class="dropdown-item " href="https://talentos.pdcase.com/ead/">PD EAD</a>
+                        <a class="dropdown-item " href="https://talentos.pdcase.com/">PD Case EAD</a>
                     </div>
                 </div>
             </div>
@@ -235,30 +235,28 @@
                 <div class="card-index__retangulo-amarelo position-absolute top-0 start-0 position-relative">
                     <!-- foto perfil -->
                     <figure class="m-0">
-                        <img src="./imagens/icones/Foto.svg" alt="foto padrão"
+                        <img src="./imagens/foto-de-perfil/joaotavares.jpg" alt="Foto João"
                             class="card-index__foto rounded-circle position-absolute top-100 start-50 translate-middle">
-                        <figcaption>Foto padrão</figcaption>
+                        <figcaption>Foto João</figcaption>
                     </figure>
                 </div>
                 <!-- seção conteudo -->
                 <div class="card-index__conteudo d-flex flex-column justify-content-evenly align-items-center ">
                     <!-- identificação -->
                     <div class=" d-flex flex-column justify-content-evenly align-items-center">
-                        <h2 class="card-index__nome text-capitalize m-0 p-0">Nome Sobrenome</h2>
-                        <p class="card-index__descricao text-center lh-sm m-0 p-0">Desenvolvedor Software | Criação
-                            de
-                            Sites e
-                            Sistemas Web | Automação</p>
+                        <h2 class="card-index__nome text-capitalize m-0 p-0">João Tavares</h2>
+                        <p class="card-index__descricao text-center lh-sm m-0 p-0">Desenvolvedor Front-end | Aprendiz de Programador | Criação de Projetos | Lógica de programação</p>
                     </div>
                     <!-- badges -->
                     <div class="w-100 d-flex justify-content-center align-items-center flex-wrap gap-1 gap-md-2">
-                        <img src="./imagens/badges/SQLite.svg" alt="SQLite" class="card-index__badges">
-                        <img src="./imagens/badges/Javascript.svg" alt="Javascript" class="card-index__badges">
-                        <img src="./imagens/badges/MySQL.svg" alt="MySQL" class="card-index__badges">
+                        <img src="./imagens/badges/HTML.svg" alt="HTML" class="card-index__badges">
                         <img src="./imagens/badges/CSS.svg" alt="CSS" class="card-index__badges">
-                        <img src="./imagens/badges/SpringBoot.svg" alt="HTML" class="card-index__badges">
-                        <img src="./imagens/badges/Python.svg" alt="python" class="card-index__badges">
-                        <img src="./imagens/badges/Angular.svg" alt="MySQL" class="card-index__badges">
+                        <img src="./imagens/badges/Javascript.png" alt="Javascript" class="card-index__badges">
+                        <img src="./imagens/badges/Figma.svg" alt="Figma" class="card-index__badges">
+                        <img src="./imagens/badges/Bootstrap.svg" alt="Bootstrap" class="card-index__badges">
+                        <img src="./imagens/badges/Git.svg" alt="Git" class="card-index__badges">
+                        <img src="./imagens/badges/Github.svg" alt="GitHub" class="card-index__badges">
+                        <img src="./imagens/badges/Gitlab.svg" alt="GitLab" class="card-index__badges">
                     </div>
                     <!-- seção responsaveis tec. e supervisor -->
                     <div class="w-100 d-flex justify-content-evenly align-items-center m-0 p-0">
@@ -268,7 +266,7 @@
                                 class="card-index__icones">
                             <div>
                                 <h2 class="fw-bold">Responsável técnico:</h2>
-                                <p>Nome Sobrenome</p>
+                                <p>Matheus Lopes</p>
                             </div>
                         </div>
                         <!-- supervisor -->
@@ -276,12 +274,12 @@
                             <img src="/imagens/icones/Supervisor.svg" alt="icone supervisor" class="card-index__icones">
                             <div>
                                 <h2 class="fw-bold">Supervisor:</h2>
-                                <p>Nome Sobrenome</p>
+                                <p>Tiago Martins</p>
                             </div>
                         </div>
                     </div>
                     <!-- botão ver mais -->
-                    <a href="/perfil.html"
+                    <a href="/paginas-joao/perfil-João.html"
                         class="card-index__btn-ver-mais d-flex justify-content-center align-items-center border border-0 text-decoration-none ">
                         Ver Perfil
                     </a>
@@ -414,76 +412,14 @@
                 </div>
             </article>
 
-             <!-- card perfil -->
+            <!-- card perfil -->
             <article
                 class="col card-index d-flex flex-column justify-content-center align-items-center m-0 p-0 position-relative">
                 <!-- retangulo amarelo e img perfil -->
                 <div class="card-index__retangulo-amarelo position-absolute top-0 start-0 position-relative">
                     <!-- foto perfil -->
                     <figure class="m-0">
-                        <img src="imagens/fotos-de-perfil/foto-perfil-caio.jpg" alt="foto padrão"
-                            class="card-index__foto rounded-circle position-absolute top-100 start-50 translate-middle">
-                        <figcaption>Foto Caio</figcaption>
-                    </figure>
-                </div>
-                <!-- seção conteudo -->
-                <div class="card-index__conteudo d-flex flex-column justify-content-evenly align-items-center ">
-                    <!-- identificação -->
-                    <div class=" d-flex flex-column justify-content-evenly align-items-center">
-                        <h2 class="card-index__nome text-capitalize m-0 p-0">Caio Martins</h2>
-                        <p class="card-index__descricao text-center lh-sm m-0 p-0"> Estudante | Criação
-                            de
-                            Sites e
-                            Sistemas Web | The Best Cotemig 2024</p>
-                    </div>
-                    <!-- badges -->
-                    <div class="w-100 d-flex justify-content-center align-items-center flex-wrap gap-1 gap-md-2">
-                        <img src="./imagens/badges/HTML.svg" alt="MySQL" class="card-index__badges">
-                        <img src="./imagens/badges/CSS.png" alt="CSS" class="card-index__badges">
-                        <img src="./imagens/badges/Figma.svg" alt="HTML" class="card-index__badges">
-                        <img src="./imagens/badges/React.svg" alt="python" class="card-index__badges">
-                        <img src="./imagens/badges/MySQL.svg" alt="MySQL" class="card-index__badges">
-                        <img src="./imagens/badges/PHP.svg" alt="CSS" class="card-index__badges">
-                        <img src="./imagens/badges/Bootstrap.svg" alt="HTML" class="card-index__badges">
-                        <img src="./imagens/badges/Javascript.svg" alt="python" class="card-index__badges">
-                    </div>
-                    <!-- seção responsaveis tec. e supervisor -->
-                    <div class="w-100 d-flex justify-content-evenly align-items-center m-0 p-0">
-                        <!-- responsavel -->
-                        <div class="card-index__coordenadores d-flex justify-content-center align-items-center gap-1">
-                            <img src="./imagens/icones/Responsável Tecnico.svg" alt="responsável técnico"
-                                class="card-index__icones">
-                            <div>
-                                <h2 class="fw-bold">Responsável técnico:</h2>
-                                <p>Matheus Lopes</p>
-                            </div>
-                        </div>
-                        <!-- supervisor -->
-                        <div class="card-index__coordenadores d-flex justify-content-center align-items-center gap-1">
-                            <img src="/imagens/icones/Supervisor.svg" alt="icone supervisor" class="card-index__icones">
-                            <div>
-                                <h2 class="fw-bold">Supervisor:</h2>
-                                <p>Tiago Martins</p>
-                            </div>
-                        </div>
-                    </div>
-                    <!-- botão ver mais -->
-                    <a href="paginas-caio/perfil-caio.html"
-                        class="card-index__btn-ver-mais d-flex justify-content-center align-items-center border border-0 text-decoration-none ">
-                        Ver Perfil
-                    </a>
-                </div>
-            </article>
-
-
-            <!-- card perfil Emanuel -->
-            <article
-                class="col card-index d-flex flex-column justify-content-center align-items-center m-0 p-0 position-relative">
-                <!-- retangulo amarelo e img perfil -->
-                <div class="card-index__retangulo-amarelo position-absolute top-0 start-0 position-relative">
-                    <!-- foto perfil -->
-                    <figure class="m-0">
-                        <img src="./imagens/fotos-de-perfil/emanuel.jpg" alt="foto padrão"
+                        <img src="./imagens/icones/Foto.svg" alt="foto padrão"
                             class="card-index__foto rounded-circle position-absolute top-100 start-50 translate-middle">
                         <figcaption>Foto padrão</figcaption>
                     </figure>
@@ -492,7 +428,7 @@
                 <div class="card-index__conteudo d-flex flex-column justify-content-evenly align-items-center ">
                     <!-- identificação -->
                     <div class=" d-flex flex-column justify-content-evenly align-items-center">
-                        <h2 class="card-index__nome text-capitalize m-0 p-0">Emanuel Bravo</h2>
+                        <h2 class="card-index__nome text-capitalize m-0 p-0">Nome Sobrenome</h2>
                         <p class="card-index__descricao text-center lh-sm m-0 p-0">Desenvolvedor Software | Criação
                             de
                             Sites e
@@ -500,17 +436,16 @@
                     </div>
                     <!-- badges -->
                     <div class="w-100 d-flex justify-content-center align-items-center flex-wrap gap-1 gap-md-2">
-                        <!-- html, css, javascript, figma, docker, bootstrap, java, python, postgresql, sqlite -->
-                        <img src="./imagens/badges/HTML.svg" alt="HTML" class="card-index__badges">
-                        <img src="./imagens/badges/CSS.svg" alt="CSS" class="card-index__badges">
-                        <img src="./imagens/badges/Javascript.svg" alt="Javascript" class="card-index__badges">
-                        <img src="./imagens/badges/Figma.svg" alt="Figma" class="card-index__badges">
-                        <img src="./imagens/badges/Docker.svg" alt="Docker" class="card-index__badges">
-                        <img src="./imagens/badges/Bootstrap.svg" alt="Bootstrap" class="card-index__badges">
-                        <img src="./imagens/badges/JAVA.svg" alt="JAVA" class="card-index__badges">
+                        <img src="./imagens/badges/Rust.svg" alt="MySQL" class="card-index__badges">
+                        <img src="./imagens/badges/Scrum.svg" alt="CSS" class="card-index__badges">
+                        <img src="./imagens/badges/SpringBoot.svg" alt="HTML" class="card-index__badges">
                         <img src="./imagens/badges/Python.svg" alt="python" class="card-index__badges">
-                        <img src="./imagens/badges/PostgreSQL.svg" alt="PostgreSQL" class="card-index__badges">
-                        <img src="./imagens/badges/SQLite.svg" alt="SQLite" class="card-index__badges">
+                        <img src="./imagens/badges/MySQL.svg" alt="MySQL" class="card-index__badges">
+                        <img src="./imagens/badges/CSS.svg" alt="CSS" class="card-index__badges">
+                        <img src="./imagens/badges/HTML.svg" alt="HTML" class="card-index__badges">
+                        <img src="./imagens/badges/PHP.svg" alt="python" class="card-index__badges">
+                        <img src="./imagens/badges/Go.svg" alt="python" class="card-index__badges">
+                        <img src="./imagens/badges/JAVA.svg" alt="python" class="card-index__badges">
                     </div>
                     <!-- seção responsaveis tec. e supervisor -->
                     <div class="w-100 d-flex justify-content-evenly align-items-center m-0 p-0">
@@ -520,7 +455,7 @@
                                 class="card-index__icones">
                             <div>
                                 <h2 class="fw-bold">Responsável técnico:</h2>
-                                <p>Matheus Lopes</p>
+                                <p>Nome Sobrenome</p>
                             </div>
                         </div>
                         <!-- supervisor -->
@@ -528,12 +463,12 @@
                             <img src="/imagens/icones/Supervisor.svg" alt="icone supervisor" class="card-index__icones">
                             <div>
                                 <h2 class="fw-bold">Supervisor:</h2>
-                                <p>Tiago Martins</p>
+                                <p>Nome Sobrenome</p>
                             </div>
                         </div>
                     </div>
                     <!-- botão ver mais -->
-                    <a href="/paginas-emanuel/perfil.html"
+                    <a href="/perfil.html"
                         class="card-index__btn-ver-mais d-flex justify-content-center align-items-center border border-0 text-decoration-none ">
                         Ver Perfil
                     </a>
