--- a/projeto.html
+++ b/projeto.html
@@ -203,35 +203,35 @@
                         <h3>Colaboradores</h3>
                         <ul class="list-unstyled collaborators-list">
                             <li class="collaborator-item">
-                                <img src="imagens/icones/user.svg" alt="Ícone de usuário" class="profile-pic">
+                                <img src="/imagens/foto-de-perfil/tiagomartins.jpg" alt="Ícone de usuário" class="profile-pic">
                                 <span class="collaborator-name">Tiago Martins</span>
                             </li>
                             <li class="collaborator-item">
-                                <img src="imagens/icones/user.svg" alt="Ícone de usuário" class="profile-pic">
+                                <img src="/imagens/icones/user.svg" alt="Ícone de usuário" class="profile-pic">
                                 <span class="collaborator-name">Julio Pereira</span>
                             </li>
                             <li class="collaborator-item">
-                                <img src="imagens/icones/user.svg" alt="Ícone de usuário" class="profile-pic">
+                                <img src="/imagens/icones/user.svg" alt="Ícone de usuário" class="profile-pic">
                                 <span class="collaborator-name">Matheus Lopes</span>
                             </li>
                             <li class="collaborator-item">
-                                <img src="imagens/icones/user.svg" alt="Ícone de usuário" class="profile-pic">
+                                <img src="/imagens/foto-de-perfil/foto-perfil-caio.jpg" alt="Ícone de usuário" class="profile-pic">
                                 <span class="collaborator-name">Caio Caldeira</span>
                             </li>
                             <li class="collaborator-item">
-                                <img src="imagens/icones/user.svg" alt="Ícone de usuário" class="profile-pic">
+                                <img src="/imagens/foto-de-perfil/emanuel.jpg" alt="Ícone de usuário" class="profile-pic">
                                 <span class="collaborator-name">Emanuel Bravo</span>
                             </li>
                             <li class="collaborator-item">
-                                <img src="imagens/icones/user.svg" alt="Ícone de usuário" class="profile-pic">
+                                <img src="/imagens/icones/user.svg" alt="Ícone de usuário" class="profile-pic">
                                 <span class="collaborator-name">Geovanna Alves</span>
                             </li>
                             <li class="collaborator-item">
-                                <img src="imagens/icones/user.svg" alt="Ícone de usuário" class="profile-pic">
+                                <img src="/imagens/foto-de-perfil/joaotavares.jpg" alt="Ícone de usuário" class="profile-pic">
                                 <span class="collaborator-name">Joao Tavares</span>
                             </li>
                             <li class="collaborator-item">
-                                <img src="imagens/icones/user.svg" alt="Ícone de usuário" class="profile-pic">
+                                <img src="/imagens/foto-de-perfil/leonardomaciel.svg" alt="Ícone de usuário" class="profile-pic">
                                 <span class="collaborator-name">Leonardo Maciel</span>
                             </li>
                         </ul>
@@ -259,14 +259,14 @@
 
     <script>
         const projectImages = [
-            'imagens/projetos/vitrine (4).png',
-            'imagens/projetos/vitrine (5).png',
-            'imagens/projetos/vitrine (1).png',
-            'imagens/projetos/vitrine (3).png',
-            'imagens/projetos/vitrine (2).png',
-            'imagens/projetos/vitrine (6).png',
-            'imagens/projetos/vitrine (7).png',
-            'imagens/projetos/vitrine (8).png'
+            '/imagens/projetos/vitrine (4).png',
+            '/imagens/projetos/vitrine (5).png',
+            '/imagens/projetos/vitrine (1).png',
+            '/imagens/projetos/vitrine (3).png',
+            '/imagens/projetos/vitrine (2).png',
+            '/imagens/projetos/vitrine (6).png',
+            '/imagens/projetos/vitrine (7).png',
+            '/imagens/projetos/vitrine (8).png'
 
         ];
     </script>
@@ -274,8 +274,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
         crossorigin="anonymous"></script>
-
-    <script src="js/projeto.js"></script>
+    <script src="/js/index.js"></script>
+    <script src="/js/projeto.js"></script>
 </body>
 
 </html>
