fim da tarefa 39

--- a/paginas-leonardo/projetos/projeto-netflix.html
+++ b/paginas-leonardo/projetos/projeto-netflix.html
@@ -153,9 +153,9 @@
 
     <!-- Botão voltar página de Perfil -->
     <div class="pd-projeto-botao-voltar">
-        <a href="/paginas-emanuel/perfil.html" class="d-flex align-items-center text-decoration-none fw-bold ps-3">
+        <a href="/paginas-leonardo/perfil-leonardo.html" class="d-flex align-items-center text-decoration-none fw-bold ps-3">
             <img src="/imagens/icones/return.svg" alt="retornar" class="botao-voltar-projeto">
-            <span>FSW Barber</span>
+            <span>Réplica da Netflix</span>
         </a>
     </div>
     <main class="container-fluid py-3 px-4 main-projeto">
@@ -172,7 +172,7 @@
                 <div class="project-info-sidebar">
                     <section class="project-card">
                         <h3>Descrição</h3>
-                        <p>O FSW Barber é um sistema de agendamento online projetado para revolucionar a forma como clientes e barbearias se conectam. Esta aplicação permite aos usuários explorar uma variedade de barbearias, visualizar seus serviços e profissionais, e agendar horários de forma rápida e intuitiva, eliminando a necessidade de ligações ou visitas presenciais. O projeto destaca-se por sua interface amigável e funcionalidade prática, garantindo uma experiência fluida para todos os envolvidos.</p>
+                        <p>Este projeto foi desenvolvido com HTML e CSS para praticar os conceitos aprendidos. Trata-se de uma réplica da Netflix que contém três páginas: uma página de login, uma página de seleção de perfil e uma página principal.</p>
                             
                     </section>
 
@@ -189,8 +189,8 @@
                     <section class="project-card">
                         <h3>Links</h3>
                         <div class="projects-links-container">
-                            <a href="https://barbearia-shop-git-main-bravomanels-projects.vercel.app/index.html" class="btn btn-project">Aplicação</a>
-                            <a href="https://github.com/bravomanel/barbearia_shop"
+                            <a href="https://netflix-phi-jet.vercel.app/" class="btn btn-project">Aplicação</a>
+                            <a href="https://github.com/LeonardoChiariMaciel/netflix"
                                 class="btn btn-project">Repositório</a>
                         </div>
                     </section>
@@ -199,8 +199,8 @@
                         <h3>Colaboradores</h3>
                         <ul class="list-unstyled collaborators-list">
                             <li class="collaborator-item">
-                                <img src="/imagens/fotos-de-perfil/emanuel.jpg" alt="Ícone de usuário" class="profile-pic">
-                                <span class="collaborator-name">Emanuel Bravo</span>
+                                <img src="/imagens/fotos-de-perfil/leonardomaciel.svg" alt="Ícone de usuário" class="profile-pic">
+                                <span class="collaborator-name">Leonardo Maciel</span>
                             </li>
                         </ul>
                     </section>
@@ -227,14 +227,14 @@
 
     <script>
         const projectImages = [
-            '/imagens/projetos/emanuel/barber/5.png',
-            '/imagens/projetos/emanuel/barber/6.png',
-            '/imagens/projetos/emanuel/barber/7.png',
-            '/imagens/projetos/emanuel/barber/1.png',
-            '/imagens/projetos/emanuel/barber/2.png',
-            '/imagens/projetos/emanuel/barber/3.png',
-            '/imagens/projetos/emanuel/barber/4.png',
-
+            '/imagens/projetos/projetos-leonardo/fotos-netflix/1.svg',
+            '/imagens/projetos/projetos-leonardo/fotos-netflix/2.svg',
+            '/imagens/projetos/projetos-leonardo/fotos-netflix/3.svg',
+            '/imagens/projetos/projetos-leonardo/fotos-netflix/4.svg',
+            '/imagens/projetos/projetos-leonardo/fotos-netflix/5.svg',
+            '/imagens/projetos/projetos-leonardo/fotos-netflix/6.svg',
+            '/imagens/projetos/projetos-leonardo/fotos-netflix/7.svg',
+            '/imagens/projetos/projetos-leonardo/fotos-netflix/8.svg',
         ];
     </script>
 
