--- a/projetos-compartilhados/imdb-api.html
+++ b/projetos-compartilhados/imdb-api.html
@@ -199,6 +199,10 @@
                         <h3>Colaboradores</h3>
                         <ul class="list-unstyled collaborators-list">
                             <li class="collaborator-item">
+                                <img src="/imagens/fotos-de-perfil/leonardomaciel.svg" alt="Ícone de usuário" class="profile-pic">
+                                <span class="collaborator-name">Leonardo Maciel</span>
+                            </li>
+                            <li class="collaborator-item">
                                 <img src="/imagens/fotos-de-perfil/emanuel.jpg" alt="Ícone de usuário" class="profile-pic">
                                 <span class="collaborator-name">Emanuel Bravo</span>
                             </li>
