--- a/paginas-leonardo/projetos/projeto-biblioteca.html
+++ b/paginas-leonardo/projetos/projeto-biblioteca.html
@@ -153,9 +153,9 @@
 
     <!-- Botão voltar página de Perfil -->
     <div class="pd-projeto-botao-voltar">
-        <a href="/paginas-emanuel/perfil.html" class="d-flex align-items-center text-decoration-none fw-bold ps-3">
+        <a href="/paginas-leonardo/perfil-leonardo.html" class="d-flex align-items-center text-decoration-none fw-bold ps-3">
             <img src="/imagens/icones/return.svg" alt="retornar" class="botao-voltar-projeto">
-            <span>FSW Barber</span>
+            <span>Gerenciamento de biblioteca com POO</span>
         </a>
     </div>
     <main class="container-fluid py-3 px-4 main-projeto">
@@ -172,16 +172,17 @@
                 <div class="project-info-sidebar">
                     <section class="project-card">
                         <h3>Descrição</h3>
-                        <p>O FSW Barber é um sistema de agendamento online projetado para revolucionar a forma como clientes e barbearias se conectam. Esta aplicação permite aos usuários explorar uma variedade de barbearias, visualizar seus serviços e profissionais, e agendar horários de forma rápida e intuitiva, eliminando a necessidade de ligações ou visitas presenciais. O projeto destaca-se por sua interface amigável e funcionalidade prática, garantindo uma experiência fluida para todos os envolvidos.</p>
+                        <p>Este é um gerenciador de livros, funcionários, clientes e empréstimos de uma biblioteca. O objetivo deste projeto foi praticar conceitos de orientação a objetos, como herança e polimorfismo, além de trabalhar com manipulação do DOM. A interface é simples e funcional, com foco principal na implementação da lógica em JavaScript.</p>
                             
                     </section>
 
                     <section class="project-card">
                         <h3>Badges</h3>
                         <div class="badges-container">
-                            <img src="/imagens/badges/Figma.svg" alt="Badge Figma" class="badge-item">
+                            <img src="/imagens/badges/Javascript.svg" alt="Badge Javascript" class="badge-item">
                             <img src="/imagens/badges/HTML.svg" alt="Badge HTML" class="badge-item">
                             <img src="/imagens/badges/CSS.svg" alt="Badge CSS" class="badge-item">
+                            <img src="/imagens/badges/Bootstrap.svg" alt="Badge CSS" class="badge-item">
                             <img src="/imagens/badges/Git.svg" alt="Badge Git" class="badge-item">
                         </div>
                     </section>
@@ -189,8 +190,8 @@
                     <section class="project-card">
                         <h3>Links</h3>
                         <div class="projects-links-container">
-                            <a href="https://barbearia-shop-git-main-bravomanels-projects.vercel.app/index.html" class="btn btn-project">Aplicação</a>
-                            <a href="https://github.com/bravomanel/barbearia_shop"
+                            <a href="https://biblioteca-smoky.vercel.app/" class="btn btn-project">Aplicação</a>
+                            <a href="https://github.com/LeonardoChiariMaciel/biblioteca"
                                 class="btn btn-project">Repositório</a>
                         </div>
                     </section>
@@ -199,8 +200,8 @@
                         <h3>Colaboradores</h3>
                         <ul class="list-unstyled collaborators-list">
                             <li class="collaborator-item">
-                                <img src="/imagens/fotos-de-perfil/emanuel.jpg" alt="Ícone de usuário" class="profile-pic">
-                                <span class="collaborator-name">Emanuel Bravo</span>
+                                <img src="/imagens/fotos-de-perfil/leonardomaciel.svg" alt="Ícone de usuário" class="profile-pic">
+                                <span class="collaborator-name">Leonardo Maciel</span>
                             </li>
                         </ul>
                     </section>
@@ -227,14 +228,10 @@
 
     <script>
         const projectImages = [
-            '/imagens/projetos/emanuel/barber/5.png',
-            '/imagens/projetos/emanuel/barber/6.png',
-            '/imagens/projetos/emanuel/barber/7.png',
-            '/imagens/projetos/emanuel/barber/1.png',
-            '/imagens/projetos/emanuel/barber/2.png',
-            '/imagens/projetos/emanuel/barber/3.png',
-            '/imagens/projetos/emanuel/barber/4.png',
-
+            '/imagens/projetos/projetos-leonardo/fotos-biblioteca/1.png',
+            '/imagens/projetos/projetos-leonardo/fotos-biblioteca/2.png',
+            '/imagens/projetos/projetos-leonardo/fotos-biblioteca/3.png',
+            '/imagens/projetos/projetos-leonardo/fotos-biblioteca/4.png',
         ];
     </script>
 
