--- a/projetos-compartilhados/pdpet.html
+++ b/projetos-compartilhados/pdpet.html
@@ -200,7 +200,7 @@
                         <h3>Colaboradores</h3>
                         <ul class="list-unstyled collaborators-list">
                             <li class="collaborator-item">
-                                <img src="/imagens/fotos-de-perfil/leonardo.jpg" alt="Ícone de usuário" class="profile-pic">
+                                <img src="/imagens/fotos-de-perfil/leonardomaciel.svg" alt="Ícone de usuário" class="profile-pic">
                                 <span class="collaborator-name">Leonardo Maciel</span>
                             </li>
                             <li class="collaborator-item">
