meu card no index

--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
                 <div class="card-index__retangulo-amarelo position-absolute top-0 start-0 position-relative">
                     <!-- foto perfil -->
                     <figure class="m-0">
-                        <img src="./imagens/icones/Foto.svg" alt="foto padrão"
+                        <img src="./../imagens/fotos-de-perfil/leonardomaciel.svg" alt="foto padrão"
                             class="card-index__foto rounded-circle position-absolute top-100 start-50 translate-middle">
                         <figcaption>Foto padrão</figcaption>
                     </figure>
@@ -247,7 +247,7 @@
                 <div class="card-index__conteudo d-flex flex-column justify-content-evenly align-items-center ">
                     <!-- identificação -->
                     <div class=" d-flex flex-column justify-content-evenly align-items-center">
-                        <h2 class="card-index__nome text-capitalize m-0 p-0">Nome Sobrenome</h2>
+                        <h2 class="card-index__nome text-capitalize m-0 p-0">Leonardo Maciel</h2>
                         <p class="card-index__descricao text-center lh-sm m-0 p-0">Desenvolvedor Software | Criação
                             de
                             Sites e
@@ -255,39 +255,40 @@
                     </div>
                     <!-- badges -->
                     <div class="w-100 d-flex justify-content-center align-items-center flex-wrap gap-1 gap-md-2">
-                        <img src="./imagens/badges/SQLite.svg" alt="SQLite" class="card-index__badges">
-                        <img src="./imagens/badges/Javascript.svg" alt="Javascript" class="card-index__badges">
-                        <img src="./imagens/badges/MySQL.svg" alt="MySQL" class="card-index__badges">
-                        <img src="./imagens/badges/CSS.svg" alt="CSS" class="card-index__badges">
-                        <img src="./imagens/badges/SpringBoot.svg" alt="HTML" class="card-index__badges">
-                        <img src="./imagens/badges/Python.svg" alt="python" class="card-index__badges">
-                        <img src="./imagens/badges/C++.svg" alt="MySQL" class="card-index__badges">
-                        <!-- <img src="./imagens/badges/CSS.svg" alt="CSS" class="card-index__badges">
-                        <img src="./imagens/badges/HTML.svg" alt="HTML" class="card-index__badges">
-                        <img src="./imagens/badges/Python.svg" alt="python" class="card-index__badges"> -->
+                        <img src="./../imagens/badges/HTML.svg" alt="HTML" class="card-index__badges">
+                        <img src="./../imagens/badges/CSS.svg" alt="CSS" class="card-index__badges">
+                        <img src="./../imagens/badges/Javascript.svg" alt="Javascript" class="card-index__badges">
+                        <img src="./../imagens/badges/PostgreSQL.svg" alt="PostgreSQL" class="card-index__badges">
+                        <img src="./../imagens/badges/Python.svg" alt="python" class="card-index__badges">
+                        <img src="./../imagens/badges/C++.svg" alt="C++" class="card-index__badges">
+                        <img src="./../imagens/badges/Bootstrap.svg" alt="Bootstrap" class="card-index__badges">
+                        <img src="./../imagens/badges/Figma.svg" alt="Figma" class="card-index__badges">
+                        <img src="./../imagens/badges/Github.svg" alt="Github" class="card-index__badges">
+                        <img src="./../imagens/badges/Gitlab.svg" alt="Gitlab" class="card-index__badges">
+                        
                     </div>
                     <!-- seção responsaveis tec. e supervisor -->
                     <div class="w-100 d-flex justify-content-evenly align-items-center m-0 p-0">
                         <!-- responsavel -->
                         <div class="card-index__coordenadores d-flex justify-content-center align-items-center gap-1">
-                            <img src="./imagens/icones/Responsável Tecnico.svg" alt="responsável técnico"
+                            <img src="./../imagens/icones/Responsável Tecnico.svg" alt="responsável técnico"
                                 class="card-index__icones">
                             <div>
                                 <h2 class="fw-bold">Responsável técnico:</h2>
-                                <p>Nome Sobrenome</p>
+                                <p>Matheus Lopes</p>
                             </div>
                         </div>
                         <!-- supervisor -->
                         <div class="card-index__coordenadores d-flex justify-content-center align-items-center gap-1">
-                            <img src="/imagens/icones/Supervisor.svg" alt="icone supervisor" class="card-index__icones">
+                            <img src="/../imagens/icones/Supervisor.svg" alt="icone supervisor" class="card-index__icones">
                             <div>
                                 <h2 class="fw-bold">Supervisor:</h2>
-                                <p>Nome Sobrenome</p>
+                                <p>Tiago Martins</p>
                             </div>
                         </div>
                     </div>
                     <!-- botão ver mais -->
-                    <a href="/perfil.html"
+                    <a href="perfil-leonardo.html"
                         class="card-index__btn-ver-mais d-flex justify-content-center align-items-center border border-0 text-decoration-none ">
                         Ver Perfil
                     </a>
