--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
                         </div>
                     </div>
                     <!-- botão ver mais -->
-                    <a href="perfil-leonardo.html"
+                    <a href="paginas-leonardo/perfil-leonardo.html"
                         class="card-index__btn-ver-mais d-flex justify-content-center align-items-center border border-0 text-decoration-none ">
                         Ver Perfil
                     </a>
