--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
     <main class="m-0 p-0">
         <!-- cards perfil index -->
         <section
-            class="row row-cols-1 row-cols-sm-1 row-cols-md-4 row-cols-lg-4 gap-3 gap-md-4 justify-content-center margem-top">
+            class="row row-cols-1 row-cols-sm-1 row-cols-md-4 row-cols-lg-4 gap-3 gap-md-4 margem-top mx-4">
             <!-- card perfil -->
             <!-- card perfil -->
             <article
