fix: fotos faltando

--- a/paginas-leonardo/perfil-leonardo.html
+++ b/paginas-leonardo/perfil-leonardo.html
@@ -19,7 +19,7 @@
     <!-- cabeçalho -->
     <header class="d-flex flex-row align-items-center justify-content-between m-0">
         <!-- logo -->
-        <a href="index.html">
+        <a href="/index.html">
             <!-- logo aparece somente no desktop -->
             <img src="../imagens/logo/logo-desktop.png" id="logo-desktop"
                 alt="Logo da PD Vitrine: a letra P com gradiente branco e amarelo, a letra D também em gradiente branco e amarelo, e abaixo a palavra 'Vitrine' em branco."
@@ -83,7 +83,7 @@
                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
                     <div class="modal-body m-0 p-0"><!-- opções de sistemas -->
-                        <a class="dropdown-item " href="index.html">PD Case EAD</a>
+                        <a class="dropdown-item " href="/index.html">PD Case EAD</a>
                     </div>
                 </div>
             </div>
