--- a/projetos-compartilhados/imdb-api.html
+++ b/projetos-compartilhados/imdb-api.html
@@ -153,7 +153,7 @@
 
     <!-- Botão voltar página de Perfil -->
     <div class="pd-projeto-botao-voltar">
-        <a href="/index.html" class="d-flex align-items-center text-decoration-none fw-bold ps-3">
+        <a href="/paginas-leonardo/perfil-leonardo.html" class="d-flex align-items-center text-decoration-none fw-bold ps-3">
             <img src="/imagens/icones/return.svg" alt="retornar" class="botao-voltar-projeto">
             <span>IMDb API</span>
         </a>
@@ -231,8 +231,8 @@
 
     <script>
         const projectImages = [
-            '/imagens/projetos/imdb-api/imdb-api/1.png',
-            '/imagens/projetos/imdb-api/imdb-api/2.png',
+            '/imagens/projetos/imdb-api/1.png',
+            '/imagens/projetos/imdb-api/2.png',
 
         ];
     </script>
