--- a/paginas-emanuel/perfil.html
+++ b/paginas-emanuel/perfil.html
@@ -612,7 +612,7 @@
 
                         <div class="badges">
 
-                            <figure class="badge-house"><img class="badge-icon" src="/imagens/badges/mysql.svg" alt="">
+                            <figure class="badge-house"><img class="badge-icon" src="/imagens/badges/MySQL.svg" alt="">
                                 <figcaption></figcaption>
                             </figure>
 
@@ -642,7 +642,7 @@
 
                         <div class="badges">
 
-                            <figure class="badge-house"><img class="badge-icon" src="/imagens/badges/react.svg" alt="">
+                            <figure class="badge-house"><img class="badge-icon" src="/imagens/badges/React.svg" alt="">
                                 <figcaption></figcaption>
                             </figure>
 
@@ -778,7 +778,7 @@
                         <div class="badges-card-projeto">
                             <img src="/imagens/badges/HTML.svg" alt="HTML">
                             <img src="/imagens/badges/CSS.svg" alt="CSS">
-                            <img src="/imagens/badges/JavaScript.svg" alt="JavaScript">
+                            <img src="/imagens/badges/Javascript.svg" alt="JavaScript">
                             <img src="/imagens/badges/Bootstrap.svg" alt="Bootstrap">
                             <img src="/imagens/badges/Git.svg" alt="Git">
                         </div>
@@ -804,7 +804,7 @@
                         <div class="badges-card-projeto">
                             <img src="/imagens/badges/HTML.svg" alt="HTML">
                             <img src="/imagens/badges/CSS.svg" alt="CSS">
-                            <img src="/imagens/badges/JavaScript.svg" alt="JavaScript">
+                            <img src="/imagens/badges/Javascript.svg" alt="JavaScript">
                             <img src="/imagens/badges/Bootstrap.svg" alt="Bootstrap">
                             <img src="/imagens/badges/Git.svg" alt="Git">
                         </div>
