--- a/projetos-compartilhados/pdpet.html
+++ b/projetos-compartilhados/pdpet.html
@@ -153,7 +153,7 @@
 
     <!-- Botão voltar página de Perfil -->
     <div class="pd-projeto-botao-voltar">
-        <a href="/index.html" class="d-flex align-items-center text-decoration-none fw-bold ps-3">
+        <a href="/paginas-leonardo/perfil-leonardo.html" class="d-flex align-items-center text-decoration-none fw-bold ps-3">
             <img src="/imagens/icones/return.svg" alt="retornar" class="botao-voltar-projeto">
             <span>PD PET</span>
         </a>
