fix: reverte alterações card - pagina index

--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
     <main class="m-0 p-0">
         <!-- cards perfil index -->
         <section
-            class="row row-cols-1 row-cols-sm-1 row-cols-md-4 row-cols-lg-4 gap-3 gap-md-4 margem-top mx-4">
+    class="row row-cols-1 row-cols-sm-1 row-cols-md-4 row-cols-lg-4 gap-3 gap-md-4 justify-content-center margem-top">
             <!-- card perfil -->
             <!-- card perfil -->
             <article
@@ -510,7 +510,7 @@
                         <img src="./imagens/badges/Figma.svg" alt="Figma" class="card-index__badges">
                         <img src="./imagens/badges/Docker.svg" alt="Docker" class="card-index__badges">
                         <img src="./imagens/badges/Bootstrap.svg" alt="Bootstrap" class="card-index__badges">
-                        <img src="./imagens/badges/JAVA.svg" alt="JAVA" class="card-index__badges">
+                        <img src="./imagens/badges/Java.svg" alt="JAVA" class="card-index__badges">
                         <img src="./imagens/badges/Python.svg" alt="python" class="card-index__badges">
                         <img src="./imagens/badges/PostgreSQL.svg" alt="PostgreSQL" class="card-index__badges">
                         <img src="./imagens/badges/SQLite.svg" alt="SQLite" class="card-index__badges">
