--- a/index.html
+++ b/index.html
@@ -226,12 +226,8 @@
         </section>
     </figure>
 
-    <main class="m-0 p-0">
-        <!-- cards perfil index -->
-        <section
-    class="row row-cols-1 row-cols-sm-1 row-cols-md-4 row-cols-lg-4 gap-3 gap-md-4 justify-content-center margem-top">
-            <!-- card perfil -->
-            <!-- card perfil -->
+    <section class="section-cards-index">
+        <div class="div-cards-index">
             <article
                 class="col card-index d-flex flex-column justify-content-center align-items-center m-0 p-0 position-relative">
                 <!-- retangulo amarelo e img perfil -->
@@ -248,10 +244,7 @@
                     <!-- identificação -->
                     <div class=" d-flex flex-column justify-content-evenly align-items-center">
                         <h2 class="card-index__nome text-capitalize m-0 p-0">Leonardo Maciel</h2>
-                        <p class="card-index__descricao text-center lh-sm m-0 p-0">Desenvolvedor Software | Criação
-                            de
-                            Sites e
-                            Sistemas Web | Automação</p>
+                        <p class="card-index__descricao text-center lh-sm m-0 p-0">Estagiário Desenvolvedor na PD Case | Graduando em Sistemas de Informação pela UFMG</p>
                     </div>
                     <!-- badges -->
                     <div class="w-100 d-flex justify-content-center align-items-center flex-wrap gap-1 gap-md-2">
@@ -320,10 +313,10 @@
                     <!-- badges -->
                     <div class="w-100 d-flex justify-content-center align-items-center flex-wrap gap-1 gap-md-2">
                         <img src="./imagens/badges/SQLite.svg" alt="SQLite" class="card-index__badges">
+                        <img src="./imagens/badges/C++.svg" alt="MySQL" class="card-index__badges">
                         <img src="./imagens/badges/Javascript.svg" alt="Javascript" class="card-index__badges">
                         <img src="./imagens/badges/MySQL.svg" alt="MySQL" class="card-index__badges">
                         <img src="./imagens/badges/CSS.svg" alt="CSS" class="card-index__badges">
-                        <img src="./imagens/badges/SpringBoot.svg" alt="HTML" class="card-index__badges">
                         <img src="./imagens/badges/Python.svg" alt="python" class="card-index__badges">
                         <img src="./imagens/badges/C++.svg" alt="MySQL" class="card-index__badges">
                         <!-- <img src="./imagens/badges/CSS.svg" alt="CSS" class="card-index__badges">
@@ -542,10 +535,8 @@
                     </a>
                 </div>
             </article>
-        </section>
-
-    </main>
-
+        </div>
+    </section>
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
