--- a/index.html
+++ b/index.html
@@ -238,12 +238,11 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
         crossorigin="anonymous"></script>
-    <script src="config.js"></script>
+    
+    <script src="/config.js"></script>
     <script src="/js/index.js"></script>
-    <script src="users.js"></script>
-    <script>
-        //console.log(window.env.GITLAB_TOKEN);
-    </script>
+    <script src="/js/api/utils.js"></script>
+    <script src="/js/api/users.js"></script>
 </body>
 
 </html>
