feat: links das redes sociais adicionados

--- a/perfil.html
+++ b/perfil.html
@@ -181,9 +181,9 @@
                     <img src="/imagens/icones/download.svg">
                 </button>
                 <div class="icons-sociais">
-                    <a href="#"><img class="icon-social" src="imagens/icones/teams.png"></a>
-                    <a href="#"><img class="icon-social" src="imagens/icones/gitlab.png"></a>
-                    <a href="#"><img class="icon-social" src="imagens/icones/linkedin.png"></a>
+                    <a class="link-teams" href=""><img class="icon-social" src="imagens/icones/teams.png"></a>
+                    <a class="link-gitlab" href=""><img class="icon-social" src="imagens/icones/gitlab.png"></a>
+                    <a class="link-linkedin" href=""><img class="icon-social" src="imagens/icones/linkedin.png"></a>
                 </div>
             </div>
         </article>
