--- a/perfil.html
+++ b/perfil.html
@@ -560,6 +560,9 @@
     <script src="/js/perfil.js"></script>
     <script src="/js/api/utils.js"></script>
     <script src="/js/api/profile.js"></script>
+    <script>
+        
+    </script>
 </body>
 
 </html>
