--- a/projeto.html
+++ b/projeto.html
@@ -14,6 +14,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;600&family=Vollkorn:wght@700&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
+    <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script> <!--Para formatar o readme-->
 </head>
 
 <body>
@@ -172,7 +173,7 @@
                 <div class="project-info-sidebar">
                     <section class="project-card">
                         <h3>Descrição</h3>
-                        <p>PD Vitrine, a porta de entrada para um ecossistema de talentos. Descubra os perfis e projetos
+                        <p class="readme-p">PD Vitrine, a porta de entrada para um ecossistema de talentos. Descubra os perfis e projetos
                             de nossos desenvolvedores mais promissores, um local onde o conhecimento ganha visibilidade
                             e propósito, formando talentos prontos para as demandas do mercado de tecnologia.</p>
                     </section>
@@ -257,7 +258,7 @@
         </div>
     </div>
     </script>
-
+    <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
         crossorigin="anonymous"></script>
